--- a/src/layout/head.html
+++ b/src/layout/head.html
@@ -10,5 +10,6 @@
     <script src="./js/vendors/jquery-3.6.0.min.js"></script>
     <script src="./js/vendors/vue.js"></script>
     <script src="js/vendors/gsap.js"></script>
+    <script src="./js/vendors/twzipcode.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.14/vue.js"></script> -->
     <!-- <script src="./js/vendors/vue.min.js"></script> -->
