--- a/src/sass/layout/_login.scss
+++ b/src/sass/layout/_login.scss
@@ -302,7 +302,7 @@ div#back_bg {
   // 繼續的按鈕
   #send_mail,#send_psd {
     margin-top: 40px;
-    @include btn-green;
+    @include button ($color-G);
     width: 100%;
     height: 50px;
     @media (max-width: 840.98px) {
