--- a/src/sass/style.back.scss
+++ b/src/sass/style.back.scss
@@ -9,3 +9,4 @@
 @import 'backpages/back_login';
 @import 'backpages/back_index';
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css");
+@import './backpages/back_news';
