feat: 登入註冊彈窗切換

--- a/src/layout/header.html
+++ b/src/layout/header.html
@@ -8,7 +8,7 @@
 		<div class="navRight">
 			<a href="#" class="head-icon" @click.prevent="openCart"
 				><i class="bi bi-cart2 cartIcon"><span class="cartCount">1</span></i>
-			<a href="member.html" class="head-icon"
+			<a href="member.html" class="head-icon member-icon"
 				><i class="bi bi-person memberIcon"></i
 			></a>
 			<div class="ham_btn">
