--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,7 +7,8 @@
 @import 'base/utility';
 @import 'base/typography';
 @import 'mixin/space';
-@import 'layout/login';
+// @import 'layout/login';
+@import 'layout/login_register';
 @import 'layout/header';
 @import 'layout/footer';
 @import 'frontpages/index';
