--- a/src/sass/frontpages/_news.scss
+++ b/src/sass/frontpages/_news.scss
@@ -46,12 +46,12 @@
 .main_min{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
     max-width: 100%;
 }
 
 .main_min .min_news{
-    width: 400px;
+    width: 550px;
     text-decoration: none;
     margin-top: 10px;
 }
@@ -86,7 +86,14 @@
     margin-right: 10px;
 }
 
+.min_news > img{
+    max-width: 100%;
+}
 
+.down_a{
+    margin-right: 150px;
+    margin-top: 30px;
+}
 
 
 
