--- a/src/sass/frontpages/_index.scss
+++ b/src/sass/frontpages/_index.scss
@@ -290,8 +290,8 @@
                 position: absolute;
                 z-index: 1;
                 top: 0;
-                left: 50%;
-                transform: translateX(-50%);
+                // left: 50%;
+                // transform: translateX(-50%);
                 min-width: 280px;
                 width: 70%;
             }
@@ -497,13 +497,13 @@
             transform: translateX(-50%);
             width: 700px;
             padding: 8% 15%;
-            bottom: 0%;
+            bottom: -125px;
             justify-content: flex-start;
         }
         @include mobile{
-            width: 110%;
-            padding: 5% 20%;
-            bottom: -195px;
+            width: 500px;
+            padding: 5% 90px 0 110px;
+            bottom: -111px;
         }
 
         h4{
