--- a/src/sass/frontpages/_game.scss
+++ b/src/sass/frontpages/_game.scss
@@ -1,17 +1,49 @@
-.game_in {
-    margin-top: 70px;
-    position: relative;
-    height: 500px;
-}
 
-.sheep {
-    position: absolute;
+.message_out{
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.2);
     top: 0;
-    left: 300px;
+    left: 0;
+    z-index: 1000;
 }
 
-.kai{
+.message_in{
+    width: 750px;
+    height: 474px;
     position: absolute;
-    top: 150px;
-    left: 700px;
+    background-color: #fecc55;
+    border-radius: 15px;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%
+);
+}
+
+.message_in p{
+    padding-top: 30px;
+    font-size: 24px;
+    margin-bottom: 15px;
+}
+
+
+.message_in a{
+    position: absolute;
+    text-align: center;
+    top: 59%;
+    left: 44%;
+    font-size: 24px;
+    background-image: url(/src/img/material/round_button_green.png);
+}
+
+.message_in .button_green{
+    position: absolute;
+    height: 200px;
+    top: 45%;
+    left: 37%;
+}
+
+.message_out{
+    display: none;
 }
