--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -23,3 +23,4 @@
 @import './frontpages/member_revise';
 @import './frontpages/member_checklist';
 @import './layout/member.tab';
+@import './frontpages/game';
