--- a/src/sass/frontpages/_activity.scss
+++ b/src/sass/frontpages/_activity.scss
@@ -1,3 +1,8 @@
+.activity_banner{
+    width: 100%;
+	height: auto;
+	display: block;
+}
 .checkList {
     display: flex;
 }
@@ -11,18 +16,29 @@
 }
 
 
-/* .odd_item:nth-child(odd){
+.odd_item:nth-child(odd) {
+
+    background-color: rgb(223, 223, 223);
     .item{  
-        background-color: rgb(226, 180, 180);
-            .item_img{
-                order: 2;
-                background-color: rgb(228, 90, 90);
-            }
-            .item_p{
-                order: 1;
-            }
-    }
-} */
+        .item_imgcover{
+            order: 2;
+        }
+        .item_p{
+            order: 1;
+        }
+}
+}
+
+// section:nth-child(odd){
+//     .item{  
+//             .item_img{
+//                 order: 2;
+//             }
+//             .item_p{
+//                 order: 1;
+//             }
+//     }
+// }
 
  
 .item{
@@ -106,11 +122,7 @@
 
 
 
-.odd_item:nth-child(odd) {
 
-    background-color: rgb(223, 223, 223);
-
-}
 
 #slider {
     position: relative;
