--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -25,3 +25,4 @@
 @import './layout/member.tab';
 @import './frontpages/activity.scss';
 @import './frontpages/game';
+@import './frontpages/products';
