--- a/src/sass/frontpages/_game.scss
+++ b/src/sass/frontpages/_game.scss
@@ -6,6 +6,27 @@
     margin: 0;
     padding: 0;
 
+    .backtoactivity{
+        position: absolute;
+        top: 20px;
+        left: 20px;
+        padding-right: 50px;
+        padding-bottom: 50px;
+        z-index: 50;
+        @include mobile{
+            top: 10px;
+            left: 10px;
+        }
+        img{
+            width: 200px;
+            @include pad{
+                width: 100px;
+                padding-right: 0px;
+                padding-bottom: 0px;
+            }
+        }
+    }
+
     img {
         user-select: none;
         pointer-events: none;
@@ -13,7 +34,7 @@
 
     h4 {
         text-align: center;
-        padding-top: 50px;
+        padding-top: 60px;
     }
 
     p {
@@ -28,7 +49,6 @@
         background-repeat: no-repeat;
         width: 100%;
         height: 100vh;
-        /* position: relative; */
     }
 
     .sheep {
