--- a/src/sass/layout/_login_register.scss
+++ b/src/sass/layout/_login_register.scss
@@ -81,22 +81,14 @@
         }
       }
 
-      .forget {
-        margin-top: 10px;
-        margin-bottom: 25px;
-        align-self: flex-end;
-        color: $color_B;
-        transition: 0.5s;
-        &:hover {
-          color: $color_G;
-        }
-      }
+      
       #login_btn {
         @include buttonSet;
         width: 100%;
         border-radius: 5px;
         height: 50px;
         font-size: $fs-xs;
+        margin-top: 25px;
         margin-bottom: 15px;
         cursor: pointer;
         &:hover {
@@ -163,10 +155,27 @@ div#back_bg {
 	align-items: center;
 }
 
-.register_link{
-	text-align: center;
-  cursor: pointer;
+.toggle-links{
+  text-align: center;
+  .register_link{
+    cursor: pointer;
+    &:hover {
+      color: $color_G;
+    }
+  }
+  
+  .forget_link {
+    margin: 15px auto 0;
+    display: block;
+    color: $color_B;
+    transition: 0.5s;
+    cursor: pointer;
+    &:hover {
+      color: $color_G;
+    }
+  }
 }
+
 
 // 註冊填資料 表單
 .register_form {
