--- a/src/layout/login_register.html
+++ b/src/layout/login_register.html
@@ -1,6 +1,8 @@
 <div id="back_bg" class="-off"></div>
 <div id="login_box" class="-off">
-    <div class="shikaBlock"><h1><img src="../img/logo_white.svg" alt=""></h1></div>
+    <div class="shikaBlock">
+        <h1><img src="../img/logo_white.svg" alt=""></h1>
+    </div>
     <div class="loginBlock" id="login_register_app">
 
         <component :is='content'></component>
@@ -61,11 +63,11 @@
 <script src="js/login.js"></script>
 <script>
     Vue.component('login', {
-            template: `
+        template: `
                 <form action="" method="POST" id="login_form">
                     <h4>登入</h4>
                     <label for="userMail"><h5>電子郵件</h5></label>
-                    <input type="email" name="userMail" id="userMail">
+                    <input type="email" name="userMail" class="userMail">
                     <label for="password"><h5>密碼</h5></label>
                     <input type="password" name="password" id="password">
                     <a href="#" class="forget">忘記密碼？</a>
@@ -73,7 +75,7 @@
                     <button type="button" id="FBlogin_btn">透過FACEBOOK登入</button>
                     
             </form>
-            `,    
+            `,
     });
 
     Vue.component('register', {
@@ -81,47 +83,47 @@
         <form action="" method="POST" id="login_form">
             <h4>註冊</h4>
             <label for="userMail"><h5>電子郵件</h5></label>
-            <input type="email" name="userMail" id="userMail">
+            <input type="email" name="userMail" class="userMail">
             <label for="password"><h5>密碼</h5></label>
             <input type="password" name="password" id="password">
             <label for="repassword"><h5>確認密碼</h5></label>
             <input type="password" name="repassword" id="repassword">
             <button type="button" id="next" class="next">繼續</button>
-        </form>`, 
+        </form>`,
     });
-        
+
     new Vue({
         el: '#login_register_app',
         data: {
             content: 'login',
         },
         methods: {
-            off(){
+            off() {
                 $('.register_link').remove();
             },
         },
     });
-    
 
-    $(".member-icon").on("click", function(e){
+
+    $(".member-icon").on("click", function (e) {
         e.preventDefault();
         // TODO: 檢查是否有登入
         $("#login_box").removeClass("-off");
         $("#back_bg").removeClass("-off");
     })
 
-    $('.loginBlock').on("click", function(e){
-        if (e.target.classList.contains("next")){
+    $('.loginBlock').on("click", function (e) {
+        if (e.target.classList.contains("next")) {
             $("#login_form").remove();
             $("#register2").removeClass("form-off");
         }
 
-        if (e.target.classList.contains("to3")){
+        if (e.target.classList.contains("to3")) {
             $("#register2").remove();
             $("#register3").removeClass("form-off");
         }
 
-        if(e.target.classList.contains("register_done")){
+        if (e.target.classList.contains("register_done")) {
             $("#login_box").addClass("-off");
             $('#back_bg').addClass("-off");
         }
