feat: login_register 新增忘記密碼部分

--- a/src/layout/password_reset_2.html
+++ b/src/layout/password_reset_2.html
@@ -7,7 +7,7 @@
                 <p>請輸入您的新密碼</p>
                 <label for="password"><h5>密碼</h5></label>
                 <input type="password" name="password" id="password">
-                <label for=""><h5>密確認碼</h5></label>
+                <label for=""><h5>密碼確認</h5></label>
                 <input type="password" name="repassword" id="repassword">
                 <button type="button" id="send_psd">繼續</button>
             </form>
