--- a/src/sass/style.back.scss
+++ b/src/sass/style.back.scss
@@ -15,3 +15,4 @@
 @import 'backpages/back_activity_detail';
 @import 'backpages/back_products';
 @import 'backpages/back_product_detail';
+@import './backpages/back_news';
