--- a/src/sass/backpages/_back_news.scss
+++ b/src/sass/backpages/_back_news.scss
@@ -102,10 +102,19 @@ margin-left: 260px;
 .down a{
     display: inline-block;
     width: 25px;
-    height: 25px;
-    margin: 8px 5px;
-    background-color: #fecc55;
+    height: 35px;
+    margin: 5px 5px;
     font-size: 15px;
     text-align: center;
     border-radius: 50%;
+}
+
+.down span{
+    display: inline-block;
+    background-color: #fecc55;
+    margin-top: 10px;
+    margin-left: 15px;
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
 }
