feat: 新增商品詳細頁面連結

--- a/src/sass/backpages/_back_news.scss
+++ b/src/sass/backpages/_back_news.scss
@@ -75,7 +75,7 @@ margin-left: 260px;
     display: flex;
     border: 1px solid $color_G;
     border-radius: 5px;
-    justify-content: space-around;
+    justify-content:x` space-around;
     align-items: center;
     margin-left: 300px;
     margin-top: 25px;
