style: info.html 字大小調整

--- a/src/layout/login_register.html
+++ b/src/layout/login_register.html
@@ -117,7 +117,12 @@
                 $('.register_link').remove();
                 $('.forget_link').remove();
             },
+
         },
+        updated() {
+            alert(1);
+        },
+
     });
 
 
