--- a/src/sass/frontpages/_member_revise.scss
+++ b/src/sass/frontpages/_member_revise.scss
@@ -5,6 +5,14 @@
     height: 400px;
     border-radius: 8px;
     margin: 0 auto;
+    @include pad{
+        width: 400px;
+    height: 200px;
+    @include mobile{
+        width: 200px;
+        height: 100px;
+    }
+    }
    
 }
 
@@ -109,3 +117,6 @@
     color: red;
 
 }
+
+//RWD
+
