--- a/src/sass/frontpages/_animal.scss
+++ b/src/sass/frontpages/_animal.scss
@@ -45,6 +45,7 @@
     left: calc(100vw*(637.94)/1440);
     animation: swing 1s infinite ;
     transform-origin: bottom;
+    cursor: pointer;
 }
 
 .icon_cow{
@@ -54,6 +55,7 @@
     left: calc(100vw*(358.76)/1440);
     animation: swing 1s infinite ;
     transform-origin: bottom;
+    cursor: pointer;
 }
 
 
@@ -64,6 +66,7 @@
     left: calc(100vw*(761.61)/1440);
     animation: swing 1s infinite ;
     transform-origin: bottom;
+    cursor: pointer;
 }
 
 .icon_horse{
@@ -73,6 +76,7 @@
     left: calc(100vw*(259.58)/1440);
     animation: swing 1s infinite ;
     transform-origin: bottom;
+    cursor: pointer;
 }
 
 .icon_pig{
@@ -82,6 +86,7 @@
     left: calc(100vw*(1086.09)/1440);
     animation: swing 1s infinite ;
     transform-origin: bottom;
+    cursor: pointer;
 }
 
 .icon_deer{
@@ -91,6 +96,7 @@
     left: calc(100vw*(33.06)/1440);
     animation: swing 1s infinite ;
     transform-origin: bottom;
+    cursor: pointer;
 }
 
 .animalItem{
